# schoolrush

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml
app/application/people/: exceptions.py
app/application/people/ports/: __init__.py  password_encoder.py  people_repo.py
app/application/people/use_cases/: __init__.py  register.py
app/domain/: exceptions.py  people.py
app/domain/people/: entities.py
app/infra/db/: config.py
app/infra/db/adapters/: people_orm_repo.py
app/infra/db/migrations/: env.py
app/infra/db/migrations/versions/: 26d7141d7ae4_.py
app/infra/db/models/: __init__.py  base.py  people_orm.py
app/infra/security/: adapters.py  config.py
tests/application/people/use_cases/: test_register.py
