[project]
name = "app-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.0",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy>=2.0.46",
]
packages = [{include = "app"}]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
    "types-requests>=2.32.4.20250913",
]


[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "ANN", "S", "W"]
exclude = ["dist", "build", ".venv"]


[tool.ruff.lint.pycodestyle]
max-line-length = 88


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["app"]


[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S105",
    "S106"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
